public/stylesheets/app.css
main {
  margin-top: 70px;
}

#cluster-map {
  width: 100%;
  height: 400px;
}

#map {
  width: 100%;
  height: 300px;
}

.carousel-inner {
  max-height: 70vh;
}

@media (min-width: 320px) {
  #cluster-map {
    height: 500px;
  }
}

